--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -20,7 +20,7 @@
 
     </div>  
 
-    <ion-list class="list">
+    <ion-list class="inputList">
       
       <ion-item>
          <ion-input type="email" placeholder="Email"></ion-input>
