--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,6 +31,10 @@
             </ion-item>
             
             <ion-item>
+              <ion-input type="text" placeholder="CPF"></ion-input>
+            </ion-item>
+
+            <ion-item>
               <ion-input type="email" placeholder="Email"></ion-input>
             </ion-item>
             
