--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -47,7 +47,7 @@
               </ion-item> 
           </ion-list>
           
-          <button class="button button-block button-assertive">
+          <button [navPush]="loginPage" class="button button-block button-assertive" >
               Cadastrar
           </button>
       </div>
