--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -21,7 +21,59 @@
       <ion-list class="inputList">  
         <ion-item class="inputBusca">
               <ion-input type="text" placeholder="Nome"></ion-input>
-        </ion-item>    
+        </ion-item>  
+        <div class="cards"> 
+          <button class="cards-input-1">
+            <img src="assets/imgs/produtos.png"/>
+            <div class="texts-cards">
+              <h5 class="textCard-title">
+                Hamburguer Artesanal
+              </h5>
+              <h6 class="textCard">
+                Local:  <br/>
+                Preparo:
+              </h6>
+            </div>
+          </button>
+          <button class="cards-input-2">
+            <img src="assets/imgs/produtos.png"/>
+            <div class="texts-cards">
+              <h5 class="textCard-title">
+                Hamburguer Artesanal
+              </h5>
+              <h6 class="textCard">
+                Local:  <br/>
+                Preparo:
+              </h6>
+            </div>
+          </button>
+        </div>
+        <div class="cards"> 
+          <button class="cards-input-3">
+            <img src="assets/imgs/produtos.png"/>
+            <div class="texts-cards">
+              <h5 class="textCard-title">
+                Hamburguer Artesanal
+              </h5>
+              <h6 class="textCard">
+                Local:  <br/>
+                Preparo:
+              </h6>
+            </div>
+          </button>
+          <button class="cards-input-4">
+            <img src="assets/imgs/produtos.png"/>
+            <div class="texts-cards">
+              <h5 class="textCard-title">
+                Hamburguer Artesanal
+              </h5>
+              <h6 class="textCard">
+                Local:  <br/>
+                Preparo:
+              </h6>
+            </div>
+          </button>
+        </div>
     </ion-list>
 
 </ion-content>
