--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -23,14 +23,14 @@
 
         <ion-list class="inputList">  
           <ion-item>
-            <ion-input type="email" placeholder="Email"></ion-input>
+            <ion-input type="email" placeholder="Email" [(ngModel)]="email"></ion-input>
           </ion-item>
           <div class="brandName-login">Esqueceu a senha?</div>
             <ion-item>
-              <ion-input type="password" placeholder="Senha"></ion-input>
+              <ion-input type="password" placeholder="Senha" [(ngModel)]="senha"></ion-input>
             </ion-item>     
         </ion-list>
-          <button class="button button-block button-assertive">
+          <button class="button button-block button-assertive" (click)="clickEntrar()">
               Entrar
           </button>
           <div class="brandName-login-2">Não tem uma conta? Cadastre-se AQUI > CADASTRAR</div>  
